# g2v_repo

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  README_LLM.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.5.md  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  npm-publish.yml  python-ci.yml
docs/: CHANGELOG.md  DESIGN.md  INSTALL.md  README.md  TEMPLATE_NOTES.md  TINK_NOTES.md  checklist_template.md  ci.md  host_logger_serial.md  host_psd_quicklook.md  index.md
examples/: demo_stack_and_project.py  demo_stack_and_project.py:Zone.Identifier
firmware/: README.md
firmware/stylus_maker_esp32s3/: platformio.ini  version.py
firmware/stylus_maker_esp32s3/lib/Adafruit_OPT3001/src/: Adafruit_OPT3001.h
firmware/stylus_maker_esp32s3/src/: main.cpp
hardware/: README.md
host/: logger_serial.py  psd_quicklook.py
scripts/: python_ci_local.sh
src/g2v/: __init__.py  cli.py  fft_codec.py  volume.py
templates/: README.md  config.example.ini
tests/: test_fft_codec.py  test_volume.py
