[project]
name = "g2v"
version = "0.1.0"
description = "Glyph‑to‑Volume demo expanded (stack/slice/project/fft)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "You" }]
dependencies = ["numpy>=1.25"]

[project.scripts]
g2v = "g2v.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
